# json-compare

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
json_compare/: __init__.py  comparator.py  log_processor.py
