[tool.poetry]
name = "json-files-compare"
version = "1.0.0.1"
description = "Simple but powerfull JSON-files comparator"
authors = ["Alexey Novikov <lexutka@gmail.com>"]
readme = "README.md"
packages = [{include = "json_compare"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
